@@ -1,7 +1,9 @@
 package ics432.imgapp;
 
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.event.Event;
+import javafx.geometry.Orientation;
 import javafx.geometry.Pos;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
@@ -10,19 +12,17 @@ import javafx.scene.image.ImageView;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
+import javafx.scene.text.Font;
+import javafx.scene.text.FontWeight;
 import javafx.stage.DirectoryChooser;
 import javafx.stage.Stage;
 import javafx.stage.WindowEvent;
-import javafx.scene.control.ProgressBar;
-
 
 import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.ArrayBlockingQueue;
 
 /**
  * A class that implements a "Job Window" on which a user
@@ -31,52 +31,43 @@ import java.util.concurrent.ArrayBlockingQueue;
 
 class JobWindow extends Stage {
 
-    protected Path targetDir;
-    protected final List<Path> inputFiles;
-    protected final FileListWithViewPort flwvp;
-    protected final Button changeDirButton;
-    protected final TextField targetDirTextField;
-    protected final Button runButton;
-    protected final Button closeButton;
-    protected final Button cancelButton;
-    protected final Label timeLabel;
-    protected final ComboBox<String> imgTransformList;
-    protected final ProgressBar progressBar;
-    protected final JobStatisticsWindow jobStatistics;
-    protected final ArrayBlockingQueue<ImageUnit> inputBuffer;
-    Timer timer;
-    static class Timer {
-        long startTime;
-        long readTime = 0;
-        long writeTime = 0;
-        long processTime = 0;
+    Path targetDir;
+    final List<Path> inputFiles;
+    final FileListWithViewPort flwvp;
+    private final Button changeDirButton;
+    private final TextField targetDirTextField;
+    private final Button runButton;
+    final Button cancelButton;
+    final Button closeButton;
+    final ComboBox<String> imgTransformList;
+    final Label runtimeInformationLabel;
 
-        Timer() {
-            startTime = System.currentTimeMillis();
-        }
-    }
+    private JobThread  runningJobThread = null;
+    private final ProgressArea progressArea;
+
+
     /**
      * Constructor
      *
-     * @param windowWidth  The window's width
-     * @param windowHeight The window's height
-     * @param X            The horizontal position of the job window
-     * @param Y            The vertical position of the job window
-     * @param id           The id of the job
-     * @param inputFiles   The batch of input image files
+     * @param windowWidth    The window's width
+     * @param windowHeight   The window's height
+     * @param X              The horizontal position of the job window
+     * @param Y              The vertical position of the job window
+     * @param id             The id of the job
+     * @param inputFiles     The batch of input image files
      */
-    JobWindow(int windowWidth, int windowHeight, double X, double Y, int id, List<Path> inputFiles, String[] filters, ArrayBlockingQueue<ImageUnit> inputBuffer, JobStatisticsWindow jobStatistics) {
+    JobWindow(int windowWidth, int windowHeight, double X, double Y, int id,
+              List<Path> inputFiles) {
+
         // The  preferred height of buttons
         double buttonPreferredHeight = 27.0;
-        this.inputBuffer = inputBuffer;
-        timer = new Timer();
+
+        // The preferred height of separators
+        double separatorPreferredHeight = 5;
 
         // Set up instance variables
-        targetDir = Paths.get(inputFiles.getFirst().getParent().toString()); // Same dir as input images
+        targetDir = Paths.get(inputFiles.get(0).getParent().toString()); // Same dir as input images
         this.inputFiles = inputFiles;
-
-        // Set up the job statistics
-        this.jobStatistics = jobStatistics;
 
         // Set up the window
         this.setX(X);
@@ -93,7 +84,6 @@ class JobWindow extends Stage {
 
         // Create a "change target directory"  button
         this.changeDirButton = new Button("");
-        this.changeDirButton.setId("changeDirButton");
         this.changeDirButton.setPrefHeight(buttonPreferredHeight);
         Image image = Util.loadImageFromResourceFile("folder-icon.png");
         ImageView imageView = new ImageView(image);
@@ -101,7 +91,7 @@ class JobWindow extends Stage {
         imageView.setFitHeight(10);
         this.changeDirButton.setGraphic(imageView);
 
-        // Create a "target directory"  text field
+        // Create a "target directory" text field
         this.targetDirTextField = new TextField(this.targetDir.toString());
         this.targetDirTextField.setDisable(true);
         HBox.setHgrow(targetDirTextField, Priority.ALWAYS);
@@ -110,18 +100,17 @@ class JobWindow extends Stage {
         Label transformLabel = new Label("Transformation: ");
         transformLabel.setPrefWidth(115);
 
-        //  Create the pull-down list of image transforms
+        //  Create the pulldown list of image transforms
         this.imgTransformList = new ComboBox<>();
-        this.imgTransformList.setId("imgTransformList");  // For TestFX
+
         this.imgTransformList.setItems(FXCollections.observableArrayList(
-                filters
+                ICS432ImgApp.filterNames
         ));
 
         this.imgTransformList.getSelectionModel().selectFirst();  //Chooses first imgTransform as default
 
         // Create a "Run" button
         this.runButton = new Button("Run job (on " + inputFiles.size() + " image" + (inputFiles.size() == 1 ? "" : "s") + ")");
-        this.runButton.setId("runJobButton");
         this.runButton.setPrefHeight(buttonPreferredHeight);
 
         // Create the FileListWithViewPort display
@@ -130,20 +119,16 @@ class JobWindow extends Stage {
 
         // Create a "Close" button
         this.closeButton = new Button("Close");
-        this.closeButton.setId("closeButton");
         this.closeButton.setPrefHeight(buttonPreferredHeight);
 
         // Create a "Cancel" button
         this.cancelButton = new Button("Cancel");
-        this.cancelButton.setId("cancelButton");
         this.cancelButton.setPrefHeight(buttonPreferredHeight);
         this.cancelButton.setDisable(true);
 
-        this.progressBar = new ProgressBar();
-        this.progressBar.setId("progressBar");
-        this.progressBar.setPrefWidth(500);
-        this.progressBar.setProgress(0.0);
-        this.progressBar.setVisible(false);
+        // Create the runtimeInformation label
+        this.runtimeInformationLabel = new Label("");
+        this.runtimeInformationLabel.setFont(new Font(15));
 
         // Set actions for all widgets
         this.changeDirButton.setOnAction(e -> {
@@ -154,10 +139,12 @@ class JobWindow extends Stage {
         });
 
         this.runButton.setOnAction(e -> {
+            this.closeButton.setDisable(true);
             this.changeDirButton.setDisable(true);
             this.runButton.setDisable(true);
             this.imgTransformList.setDisable(true);
-            executeMultiThreadedJob(imgTransformList.getSelectionModel().getSelectedItem());
+
+            startJob();
         });
 
         this.closeButton.setOnAction(f -> this.close());
@@ -180,14 +167,18 @@ class JobWindow extends Stage {
 
         layout.getChildren().add(flwvp);
 
-        timeLabel = new Label("");
-        layout.getChildren().add(timeLabel);
-
         HBox row3 = new HBox(5);
         row3.getChildren().add(runButton);
+        row3.getChildren().add(Util.createSeparator(0, separatorPreferredHeight, Orientation.VERTICAL));
         row3.getChildren().add(closeButton);
+        row3.getChildren().add(Util.createSeparator(0, separatorPreferredHeight, Orientation.VERTICAL));
         row3.getChildren().add(cancelButton);
-        row3.getChildren().add(progressBar);
+        row3.getChildren().add(Util.createSeparator(0, separatorPreferredHeight, Orientation.VERTICAL));
+        row3.getChildren().add(runtimeInformationLabel);
+
+        this.progressArea = new ProgressArea(5);
+        row3.getChildren().add(this.progressArea);
+
         layout.getChildren().add(row3);
 
         Scene scene = new Scene(layout, windowWidth, windowHeight);
@@ -197,6 +188,128 @@ class JobWindow extends Stage {
         this.toFront();
         this.show();
     }
+
+
+    private void startJob() {
+        // Clear the display
+        this.flwvp.clear();
+
+        // Create the Job
+        Job job = new Job(
+                this.imgTransformList.getSelectionModel().getSelectedItem(),
+                this.targetDir,
+                this.inputFiles,
+                this);
+
+        this.runningJobThread = new JobThread(job);
+        this.runningJobThread.start();
+    }
+
+    /**
+     * Nested helper class
+     */
+    private static class ProgressArea extends HBox {
+
+        final ProgressBar progressBar;
+        final Label textLabel;
+
+        public ProgressArea(int spacing) {
+            super(spacing);
+            this.setAlignment(Pos.CENTER_LEFT);
+
+            this.progressBar = new ProgressBar(0.0);
+            this.textLabel = new Label("");
+            this.textLabel.setFont(new Font(15));
+            this.textLabel.setFont(Font.font("Arial", FontWeight.BOLD, 15));
+        }
+
+        public void updateProgressBar(double progress) {
+            Platform.runLater(() -> {
+                this.getChildren().remove(this.textLabel);
+                if (!this.getChildren().contains(this.progressBar)) {
+                    this.getChildren().add(progressBar);
+                }
+                this.progressBar.progressProperty().setValue(progress);
+            });
+        }
+
+        public void showText(String text) {
+            Platform.runLater(() -> {
+                this.getChildren().remove(this.progressBar);
+                this.textLabel.setText("  " + text);
+                this.getChildren().add(this.textLabel);
+            });
+        }
+    }
+
+
+    /**
+     * Method to update job progress
+     */
+    public void updateProgress(double progress) {
+        this.progressArea.updateProgressBar(progress);
+    }
+
+    /**
+     * Method to update the display upon image processed successfully
+     *
+     * @param outputFile The path to the output file
+     */
+    public void updateDisplayAfterImgProcessed(Path outputFile) {
+        this.flwvp.addFile(outputFile);
+    }
+
+    /**
+     * Method to update the display upon job completion
+     *
+     * @param wasCancelled: true if the job was canceled
+     * @param outcomes:     Job outcomes
+     */
+    public void updateDisplayAfterJobCompletion(boolean wasCancelled,
+                                                List<ImgTransformOutcome> outcomes,
+                                                Job.Profile profile) {
+        String textToShow;
+
+        if (!wasCancelled) {
+            textToShow =
+                    "Total Time: " + String.format("%.2f sec", profile.totalExecutionTime) + " | " +
+                            "Read Time: " + String.format("%.2f sec", profile.readTime) + " | " +
+                            "Write Time: " + String.format("%.2f sec", profile.writeTime) + " | " +
+                            "Processing Time: " + String.format("%.2f sec", profile.processingTime);
+        } else {
+            textToShow = "CANCELED";
+        }
+
+        this.progressArea.showText(textToShow);
+
+        // Process the outcome
+        List<Path> toAddToDisplay = new ArrayList<>();
+
+        StringBuilder errorMessage = new StringBuilder();
+        for (ImgTransformOutcome o : outcomes) {
+            if (o.success) {
+                toAddToDisplay.add(o.outputFile);
+            } else {
+                errorMessage.append(o.inputFile.toAbsolutePath()).append(": ").append(o.error.getMessage()).append("\n");
+            }
+        }
+
+        // Pop up error dialog if needed
+        if (!errorMessage.toString().isEmpty()) {
+            Platform.runLater(() -> {
+                Alert alert = new Alert(Alert.AlertType.ERROR);
+                alert.setTitle("ImgTransform Job Error");
+                alert.setHeaderText(null);
+                alert.setContentText(errorMessage.toString());
+                alert.showAndWait();
+            });
+        }
+
+        // Update the viewport
+        this.flwvp.addFiles(toAddToDisplay);
+        this.closeButton.setDisable(false);
+    }
+
 
     /**
      * Method to add a listener for the "window was closed" event
@@ -220,33 +333,24 @@ class JobWindow extends Stage {
     }
 
     /**
-     * A method to execute the job
-     *
-     * @param filterName The name of the filter to apply to input images
+     * Nested class
      */
-    private void executeMultiThreadedJob(String filterName) {
-        // Clear the display
-        this.flwvp.clear();
-        this.closeButton.setDisable(true);
-        this.progressBar.setVisible(true);
-        for (Path inputFile : inputFiles) {
-            System.err.println("Inputted file " + inputFile + " to " + targetDir);
-            try {
-                inputBuffer.put(new ImageUnit(inputFile, targetDir,null, filterName, Files.size(inputFile) / 1048576.0,
-                        0, this,false));
-            } catch (IOException | InterruptedException ignore) {}
-        }
-        try {
-            inputBuffer.put(new ImageUnit(null, null, null, null, 0, 0, this, true));
-        } catch (InterruptedException ignore) {}
-    }
+    private static class JobThread extends Thread {
 
-    private void executeJob(String filterName) {
-        // Clear the display
-        this.flwvp.clear();
-        this.closeButton.setDisable(true);
-        this.progressBar.setVisible(true);
-        SingleThread imgProcessThread = new SingleThread(this, filterName);
-        imgProcessThread.start();
+        private final Job job;
+
+        public JobThread(Job job) {
+            this.job = job;
+        }
+
+        public void cancel() {
+            this.job.isCanceled = true;
+        }
+
+        @Override
+        public void run() {
+            this.job.execute();
+        }
+
     }
 }
